<resources>
    <string name="app_name">WorldNews</string>
    <string name="brand">World News</string>
    <string name="wbrand">World</string>
    <string name="sbrand">News</string>
    <string name="developper">Developed By LS</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favourite</string>
    <string name="room">Rooms</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
